[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/torpedo1.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/torpedo.png" type="Texture" id=2]
[ext_resource path="res://art/animations/torpedo_flame1_1.png" type="Texture" id=3]
[ext_resource path="res://art/animations/torpedo_flame1_2.png" type="Texture" id=4]
[ext_resource path="res://art/animations/torpedo_flame1_3.png" type="Texture" id=5]
[ext_resource path="res://art/animations/torpedo_flame1_4.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.83944
height = 26.1914

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="torpedo1" type="Area2D"]

scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
speed = 400

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

position = Vector2( 0, 20 )
frames = SubResource( 2 )
animation = "default"
frame = 3
playing = true
_sections_unfolded = [ "Transform" ]

[node name="lifetime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[connection signal="body_entered" from="." to="." method="_on_torpedo1_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


